crates/switchboard-server/src/proxy/snapshots/switchboard_server__proxy__transform__tests__snapshot_bedrock_converse_to_proxied.snap
---
source: crates/switchboard-server/src/proxy/transform.rs
assertion_line: 1194
expression: snapshot
---
{
  "content": "4",
  "finish_reason": "end_turn",
  "input_tokens": 10,
  "output_tokens": 2
}
