crates/switchboard-server/src/proxy/snapshots/switchboard_server__proxy__transform__tests__snapshot_openai_to_proxied.snap
---
source: crates/switchboard-server/src/proxy/transform.rs
expression: snapshot
---
{
  "max_tokens": 256,
  "messages": [
    {
      "content": "Be helpful.",
      "role": "system"
    },
    {
      "content": "What is 2+2?",
      "role": "user"
    }
  ],
  "model": "gpt-4o",
  "stream": false,
  "temperature": 0.7
}
