crates/switchboard-server/src/proxy/snapshots/switchboard_server__proxy__transform__tests__snapshot_proxied_to_bedrock_converse.snap
---
source: crates/switchboard-server/src/proxy/transform.rs
assertion_line: 1172
expression: body
---
{
  "inferenceConfig": {
    "maxTokens": 256,
    "temperature": 0.7
  },
  "messages": [
    {
      "content": [
        {
          "text": "What is 2+2?"
        }
      ],
      "role": "user"
    }
  ],
  "system": [
    {
      "text": "Be concise."
    }
  ]
}
