crates/switchboard-server/src/proxy/snapshots/switchboard_server__proxy__transform__tests__snapshot_proxied_to_vertex_gemini.snap
---
source: crates/switchboard-server/src/proxy/transform.rs
assertion_line: 1216
expression: body
---
{
  "contents": [
    {
      "parts": [
        {
          "text": "What is 2+2?"
        }
      ],
      "role": "user"
    }
  ],
  "generationConfig": {
    "maxOutputTokens": 128,
    "temperature": 0.5
  },
  "systemInstruction": {
    "parts": [
      {
        "text": "Be concise."
      }
    ]
  }
}
