crates/switchboard-server/src/proxy/snapshots/switchboard_server__proxy__transform__tests__snapshot_vertex_gemini_to_proxied.snap
---
source: crates/switchboard-server/src/proxy/transform.rs
assertion_line: 1241
expression: snapshot
---
{
  "content": "4",
  "finish_reason": "STOP",
  "input_tokens": 8,
  "output_tokens": 2
}
